--- a/index.html
+++ b/index.html
@@ -35,12 +35,37 @@
 
             <div class="header-action">
                 <button class="header-button-now button">Book now</button>
-                <button class="header-burger-menu-button">
+                <button class="header-burger-menu-button" title="Open menu">
                     <span class="burger-menu-line"></span>
                     <span class="burger-menu-line"></span>
                     <span class="burger-menu-line"></span>
                 </button>
             </div>
         </header>
+
+        <main class="content">
+            <section class="banner">
+                <div class="banner-body">
+                    <div class="banner-info">
+                        New event <br />
+                        coming up / june 7 - 13
+                    </div>
+                    <h3 class="banner-title">Crossfit</h3>
+                </div>
+                <div class="banner-pagination">
+                    <ul class="banner-pagination-list">
+                        <li class="banner-pagination-item">
+                            <button class="banner-pagination-button" type="button"></button>
+                        </li>
+                        <li class="banner-pagination-item">
+                            <button class="banner-pagination-button" type="button"></button>
+                        </li>
+                        <li class="banner-pagination-item">
+                            <button class="banner-pagination-button is-current" type="button"></button>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </main>
 </body>
 </html>
