section motivation and training types

--- a/index.html
+++ b/index.html
@@ -66,6 +66,73 @@
                     </ul>
                 </div>
             </section>
+
+            <section class="motivation">
+                <ul class="motivation-list">
+                    <li class="motivation-item">
+                        <div class="motivation-card container">
+                            <div class="motivation-body">
+                                <h3 class="motivation-card-title backdrop-title title-medium" data-title="Strong">
+                                    Be you, just stronger! <br> Power is in you</h3>
+                                <div class="motivation-card-description">
+                                    <p>
+                                    Unum solum justo ex ius. Pro cu probo laboramus eius insolens euripidis te eos, ut agam tota. 
+                                    </p>
+                                </div>
+                                <a href="" class="motivation-card-button button transparent">View more</a>
+                            </div>
+                            <img src="/images/motivation/1.jpg" alt="A man pulling himself" width="518" height="760" class="motivation-card-img">
+                        </div>
+                    </li>
+
+                    <li class="motivation-item">
+                        <div class="motivation-card container">
+                            <div class="motivation-body">
+                                <h3 class="motivation-card-title backdrop-title title-medium" data-title="Strong">
+                                    Today is the best <br>
+                                    day to start!
+                                </h3>
+                                <div class="motivation-card-description">
+                                    <p>
+                                        Sed abhorreant constituam consectetuer eu. At mei clita deserunt, his movet molestie nemore.
+                                    </p>
+                                </div>
+                                <a href="" class="motivation-card-button button transparent">View more</a>
+                            </div>
+                            <img src="/images/motivation/2.jpg" alt="A man pulling himself" width="518" height="760" class="motivation-card-img">
+                        </div>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="training-types">
+                <ul class="training-list">
+                    <li class="training-item">
+                            <img class="training-item-image" src="/icons/training-types/1.svg" width="150" height="100" alt="1">
+                            <h3 class="training-item-title">Maxpump</h3>         
+                    </li>
+                    <li class="training-item">
+                            <img class="training-item-image" src="/icons/training-types/2.svg" width="150" height="100" alt="1">
+                            <h3 class="training-item-title">Maxpump</h3>         
+                    </li>
+                    <li class="training-item">
+                        <img class="training-item-image" src="/icons/training-types/3.svg" width="150" height="100" alt="1">
+                        <h3 class="training-item-title">Maxpump</h3>         
+                    </li>  
+                    <li class="training-item">
+                        <img class="training-item-image" src="/icons/training-types/4.svg" width="150" height="100" alt="1">
+                        <h3 class="training-item-title">Maxpump</h3>         
+                    </li> 
+                    <li class="training-item">
+                        <img class="training-item-image" src="/icons/training-types/5.svg" width="150" height="100" alt="1">
+                        <h3 class="training-item-title">Maxpump</h3>         
+                    </li> 
+                    <li class="training-item">
+                        <img class="training-item-image" src="/icons/training-types/6.svg" width="150" height="100" alt="1">
+                        <h3 class="training-item-title">Maxpump</h3>         
+                    </li>  
+                </ul>
+            </section>
         </main>
 </body>
 </html>
